# akvirtualcamera

./: README.md
Manager/: CMakeLists.txt
Manager/src/: cmdparser.cpp  cmdparser.h  icameracapture.h  macos_cameracapture.mm  windows_cameracapture.cpp
